using UnityEngine;

public class FastEnemy : BaseEnemy
{

    void Awake()
    {
        gravityScale = 2f;
    }
    
}
