using UnityEngine;

public class ItemSHop : MonoBehaviour
{
    [SerializeField] Item sword;
    [SerializeField] Item mace;
    
    // Start is called once before the first execution of Update after the MonoBehaviour is created
    void Start()
    {
        
    }

    // Update is called once per frame
    void Update()
    {
        
    }
}
